--- a/css/style.css
+++ b/css/style.css
@@ -112,14 +112,27 @@ display: flex;
     margin-bottom: 118px;
 }
 
+.advantages *{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
 .advantages{
     font-family: 'Montserrat', 'Verdana', sans-serif; 
     color: #AE7C78;
     font-size: 16px;
+    margin-top: 52px;
+    margin-bottom: 80px;
+}
+
+.advantages ul{
+    display: flex;
 }
 
 .advantages h3{
     font-weight: 500;
+    margin-bottom: 10px;
 }
 
 .advantages p{
@@ -127,19 +140,24 @@ display: flex;
 }
 
 .advantages ul li{
-    padding-left: 100px;
+    width: 360px;
 }
-
 .advantages ul li:first-child{
     background:url('../image/advantage_truck.svg') top left no-repeat;
+    padding-left: 100px;
+    margin-right: 56px;
+    width: 380px;
 }
 
 .advantages ul li:nth-child(2){
     background:url('../image/advantage_bouquet.svg') top left no-repeat;
+    padding-left: 70px;
+    margin-right: 40px;
 }
 
 .advantages ul li:last-child{
     background:url('../image/advantage_photo.svg') top left no-repeat;
+    padding-left: 80px;
 }
 
 .popular-bouquet{
@@ -212,25 +230,40 @@ display: flex;
     margin: -1px;
   }
 
+  .bouquet-catalog *{
+    margin: 0;
+    padding: 0;
+  }
+
+  .bouquet-catalog{
+    margin-bottom: 80px;
+  }
+  .bouquet-catalog__list{
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      
+  }
   .bouquet-catalog h3{
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-weight: 700;
     font-size: 36px;
     color: #FFFFFF;
-    padding-top: 180px;
-    padding-bottom: 10px;
-    margin: 0;
+    letter-spacing: 1px;
+    padding-top: 187px;
+    padding-bottom: 13px;
   }
 
   .bouquet-catalog p{
     font-family: 'Montserrat', 'Verdana', sans-serif; 
     font-size: 16px;
     color: #FFFFFF;
-    margin: 0;
+    
   }
 
-  .bouquet-catalog li{
+  .bouquet-catalog__list li{
     width: 387px;
+ 
     text-align: center;
     border-radius: 10px;
     margin-top: 10px;
@@ -241,78 +274,167 @@ display: flex;
     height: 442px;
     border-radius: 10px;
   }
+  
 
-  .bouquet-catalog li:first-child{
-     background:rgb(228, 223, 219) url('../image/catalog_wedding_bouquet.jpg'); 
+  .bouquet-catalog__list li:first-child{
+     background:rgb(228, 223, 219) url('../image/catalog_wedding_bouquet.jpg') no-repeat center center;
+     background-size: cover; 
   }
 
-  .bouquet-catalog li:nth-child(2){
-    background:rgb(226, 188, 152) url('../image/cataloq_pions_bouquet.jpg');
+  .bouquet-catalog__list li:nth-child(2){
+    background:rgb(226, 188, 152) url('../image/cataloq_pions_bouquet.jpg') no-repeat center center;
+    background-size: cover;
   }
 
-  .bouquet-catalog li:last-child{
-    background:rgb(227, 227, 227) url('../image/catalog_choose_bouquet.jpg');
+  .bouquet-catalog__list li:last-child{
+    background:rgb(227, 227, 227) url('../image/catalog_choose_bouquet.jpg') no-repeat center center;
+    background-size: cover;
   }
 
-  .sale div{
-    width: 610px;
-    background: #AE7C78;
+
+  .sale *{
+    margin: 0;
+    padding: 0;
+  }
+  .sale{
+    display: flex;
+    background:  #AE7C78;
+    justify-content: space-between;
+    margin-bottom: 85px;
+  }
+  .sale__img img{
+    vertical-align: top;
+  }
+  .sale__text{
     color: white;
+    width: 400px;
+    margin: 41px auto 15px auto;
   }
   .sale h2{
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-size: 44px;
     line-height: 59px;
+    margin-bottom: 25px;
+    word-spacing: 3px;
   }
   .sale p{
     font-family: 'Montserrat', 'Verdana', sans-serif; 
     font-size: 24px;
     line-height: 29px;
   }
+
+
+  .ideal-bouquet *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
   .ideal-bouquet{
     color: #AE7C78;
+    text-align: center;
+    margin-bottom: 80px;
   }
+
+  .ideal-bouquet__list{
+    display: flex;
+    justify-content: space-between;
+  }
+
   .ideal-bouquet h2{
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-weight: 700;
     font-size: 36px;
+    letter-spacing: 1px;
+    margin-bottom: 38px;
   }
-  .ideal-bouquet h3{
+  .ideal-bouquet__list h3{
     font-weight: 500;
     font-size: 16px;
     font-family: 'Montserrat', 'Verdana', sans-serif; 
   }
-  .ideal-bouquet p{
+  .ideal-bouquet__list p{
     font-size: 16px;
     font-family: 'Montserrat', 'Verdana', sans-serif; 
+    padding-top: 10px;
+    line-height: 20px;
   }
-  .ideal-bouquet li{
-      width: 305px;
+  .ideal-bouquet__list li{
+     
       height: 148px;
-      padding-top: 50px;
+      padding-top: 62px;
       text-align: center;
+      flex-basis: 280px;
   }
 
-  .ideal-bouquet li:first-child{
+  .ideal-bouquet__list li:first-child{
     background:url('../image/ideal_bouquet_order.svg') top center no-repeat;
+   
   }
 
-  .ideal-bouquet li:nth-child(2){
+  .ideal-bouquet__list li:nth-child(2){
     background:url('../image/ideal_bouquet_detail.svg') top center no-repeat;
+  
   }
 
-  .ideal-bouquet li:nth-child(3){
+  .ideal-bouquet__list li:nth-child(3){
     background:url('../image/ideal_bouquet_pay.svg') top center no-repeat;
   }
 
-  .ideal-bouquet li:last-child{
+  .ideal-bouquet__list li:last-child{
     background:url('../image/advantage_truck.svg') top center no-repeat;
   }
-  .news h2{
+
+  .news *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .news{
+    display:grid;
+    grid-template-columns: 488px auto auto;
+    grid-template-rows: auto auto;
+    column-gap: 20px;
+  }
+
+  .news__social{
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 1;
+      grid-row-end: 3;
+      width: 370px;
+  }
+  .news__bouquet-1{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+  }
+  .news__bouquet-2{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    align-self: flex-end;
+}
+.news__bouquet-3{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    
+}
+
+  .news__social h2{
+    margin-top: 70px;
+    margin-bottom: 40px;
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-weight: bold;
     font-size: 36px;
     line-height: 48px;
+    letter-spacing: 0.6px;
     color: #AE7C78;
     position: relative;
     z-index: 1;
@@ -320,7 +442,7 @@ display: flex;
     -webkit-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
     -moz-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
   } 
-   .news h2::before{
+   .news__social h2::before{
     content:'Следите за нашими новостями';
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-weight: bold;
@@ -333,24 +455,25 @@ display: flex;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     z-index: -1; 
   } 
-  .news p{
+  .news__social p{
     font-family: 'Montserrat', 'Verdana', sans-serif; 
     font-size: 24px;
     line-height: 29px;
     color: #AE7C78;
+    margin-bottom: 40px;
   }
-.news li{
+.news__social li{
     width: 24px;
     height: 22px;
     display: inline-block;
 }
-.news li:first-child{
+.news__social li:first-child{
     background:url('../image/instagram_icon.svg') center no-repeat;
 }
-.news li:nth-child(2){
+.news__social li:nth-child(2){
     background:url('../image/facebook_icon.svg') center no-repeat;
 }
-.news li:last-child{
+.news__social li:last-child{
     background:url('../image/twitter_icon.svg') center no-repeat;
 }
 .reviews{
