--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ display: flex;
     color: #AE7C78;
     font-size: 16px;
     margin-top: 52px;
-    margin-bottom: 80px;
+    margin-bottom: 81px;
 }
 
 .advantages ul{
@@ -160,34 +160,77 @@ display: flex;
     padding-left: 80px;
 }
 
-.popular-bouquet{
-    color: #AE7C78;
+.popular-bouquet *{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
 }
+
+.popular-bouquet{
+    width: 790px;
+    color: #AE7C78;
+    display: grid;
+    grid-template-columns: 390px 400px;
+    grid-template-rows: auto auto auto;
+    margin-bottom: 55px;
+}
+
+
 
 .popular-bouquet h2{
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-weight: 700;
     font-size: 36px;
+    letter-spacing: 1px;
+
+    grid-column-start:1;
+    grid-column-end:3;
+    grid-row-start:1;
+    grid-row-end:2;
+   margin-left: 215px;
 }
 
 .popular-bouquet__tenderness{
     font-family: 'Montserrat', 'Verdana', sans-serif; 
-}
 
-.bouquet-tenderness h3{   
+    grid-column-start:1;
+    grid-column-end:2;
+    grid-row-start:2;
+    grid-row-end:3;
+}
+.button-wrapper{
+    grid-column-start:1;
+    grid-column-end:3;
+    grid-row-start:3;
+    grid-row-end:4;
+    justify-self: center;
+}
+.popular-bouquet__tenderness h3{   
     font-weight: 500;
     font-size: 24px;
+    margin-top: 68px;
 }
 .popular-bouquet__description{
     font-size: 16px;
     line-height: 20px;
+    margin-top: 22px;
 }
 .popular-bouquet__size{
     font-size: 16px;
+    margin-top: 25px;
+   
 }
 .popular-bouquet__price{
     font-weight: 500;
     font-size: 24px;
+    margin-top: 25px;
+   
+}
+
+.popular-bouquet img{
+margin-left: 15px;
+margin-top: 40px;
+
 }
 
 .popular-bouquet__button-order{
@@ -202,8 +245,11 @@ display: flex;
     display: inline-block;
     text-align: center;
     border: none;
+    margin-top: 65px;
 }
-
+.button-wrapper{
+margin-top: 10px;
+}
 .popular-bouquet__slider-button-back{
     background:url('../image/arrow_back.svg') center center no-repeat;
     display: inline-block;
@@ -396,6 +442,7 @@ display: flex;
     grid-template-columns: 488px auto auto;
     grid-template-rows: auto auto;
     column-gap: 20px;
+    margin-bottom: 80px;
   }
 
   .news__social{
@@ -404,6 +451,11 @@ display: flex;
       grid-row-start: 1;
       grid-row-end: 3;
       width: 370px;
+  }
+  .news__social ul{
+      width: 100px;
+      display: flex;
+      justify-content: space-between;
   }
   .news__bouquet-1{
     grid-column-start: 2;
@@ -476,9 +528,23 @@ display: flex;
 .news__social li:last-child{
     background:url('../image/twitter_icon.svg') center no-repeat;
 }
+
+.reviews *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 .reviews{
     border: 1px solid rgba(174, 124, 120, 1);
+    text-align: center;
 }
+
+.reviews ul{
+    display: flex;
+    justify-content: space-around;
+}
+
 .reviews h2{
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-weight: bold;
@@ -490,13 +556,14 @@ display: flex;
     font-family: 'Montserrat', 'Verdana', sans-serif;
     font-size: 16px;
     color: #AE7C78;
-    
+    width: 300px;
 }
-.reviews li p{
+.reviews li blockquote{
     line-height: 20px;
 }
-.reviews li h3{
+.reviews li cite{
     font-weight: 500;
+    font-style: normal;
 }
 .contacts{
     width: 1440px;
