--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ header {
 .authors-bouquet *{
     margin:0;
     padding:0;
+    box-sizing: border-box;
 }
 
 .authors-bouquet{
@@ -121,10 +122,11 @@ header {
     line-height: 29px;
 
     margin-bottom: 65px;
-    margin-right: 10px;
+   
 }
 .authors-bouquet div{
     width:408px;
+    margin-right: 10px;
 }
 
 .authors-bouquet img:first-of-type{
@@ -133,8 +135,8 @@ header {
 }
 
 .authors-bouquet a{
+
     font-size: 16px;
-    line-height: 80px;
     color: #FFFFFF;
     background: #D89999;
     border-radius: 40px;
@@ -143,7 +145,9 @@ header {
     display: inline-block;
     margin-bottom: 118px;
     width: 285px;
-    height: 80px;
+    padding: 31px 5px;
+  
+
 }
 
 
@@ -159,27 +163,31 @@ header {
     color: #AE7C78;
     font-size: 16px;
 
-    margin-bottom: 81px;
+    margin-bottom: 60px;
 }
 
-.advantages ul{
+.advantages__list{
     display: flex;
+    flex-wrap: wrap;
 }
 
-.advantages h3{
+.advantages__list h3{
     font-weight: 500;
     margin-bottom: 10px;
 }
 
-.advantages p{
+.advantages__list p{
     line-height: 20px;
 }
 
-.advantages ul li{
+.advantages__item{
     width: 360px;
+    margin-right: 45px;
+    padding-bottom: 20px;
+    padding-left: 70px;
 }
 
-.advantages ul li:first-child{
+.quick-delivery{
     background:url('../image/advantage_truck.svg') top left no-repeat;
 
     padding-left: 100px;
@@ -187,19 +195,22 @@ header {
     width: 380px;
 }
 
-.advantages ul li:nth-child(2){
+.fresh-flowers{
     background:url('../image/advantage_bouquet.svg') top left no-repeat;
 
     padding-left: 70px;
     margin-right: 40px;
 }
 
-.advantages ul li:last-child{
+.send-foto{
     background:url('../image/advantage_photo.svg') top left no-repeat;
 
     padding-left: 80px;
 }
 
+.advantages__item:nth-child(3n){
+    margin-right: 0;
+}
 
 
 .popular-bouquet *{
@@ -216,7 +227,7 @@ header {
     display: grid;
     grid-template-columns: 390px 400px;
     grid-template-rows: auto auto auto;
-    margin-bottom: 55px;
+    margin-bottom: 65px;
 }
 
 
@@ -231,7 +242,7 @@ header {
     grid-column-end:3;
     grid-row-start:1;
     grid-row-end:2;
-   margin-left: 215px;
+    margin-left: 215px;
 }
 
 .popular-bouquet__tenderness{
@@ -239,6 +250,7 @@ header {
     grid-column-end:2;
     grid-row-start:2;
     grid-row-end:3;
+    padding: 0 5px;
 }
 
 .button-wrapper{
@@ -283,7 +295,7 @@ header {
 
 .popular-bouquet__button-order{
     font-size: 16px;
-    line-height: 80px;
+    
     color: #FFFFFF;
     background: #D89999;
     border-radius: 40px;
@@ -292,8 +304,10 @@ header {
 
     display: inline-block;
     width: 285px;
-    height: 80px;
     margin-top: 65px;
+    margin-bottom: 15px;
+    padding: 31px 5px;
+
 }
 
 .button-wrapper{
@@ -325,16 +339,45 @@ header {
 .bouquet-catalog *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .bouquet-catalog{
-    margin-bottom: 80px;
+    box-sizing: border-box;
+    margin-bottom: 65px;
 }
 
 .bouquet-catalog__list{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+}
+
+.bouquet-catalog__card{
+    border-radius: 10px;
+
+    margin-right: 19px;
+    margin-bottom: 15px;
+    width: 387px;
+    min-height: 442px;
+}
+
+.bouquet-catalog__card:nth-child(3n){
+    margin-right: 0;
+}
+
+.wedding-bouquet{
+    background:rgb(228, 223, 219) url('../image/catalog_wedding_bouquet.jpg') no-repeat center;
+    background-size: cover; 
+}
+
+.pions-bouquet{
+    background:rgb(226, 188, 152) url('../image/cataloq_pions_bouquet.jpg') no-repeat center;
+    background-size: cover;
+}
+
+.choose-bouquet{
+    background:rgb(227, 227, 227) url('../image/catalog_choose_bouquet.jpg') no-repeat center;
+    background-size: cover;
 }
 
 .bouquet-catalog h3{
@@ -344,7 +387,9 @@ header {
     color: #FFFFFF;
     letter-spacing: 1px;
 
-    padding-top: 187px;
+    padding-top: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-bottom: 13px;
 }
 
@@ -352,38 +397,24 @@ header {
     font-family: 'Montserrat', 'Verdana', sans-serif; 
     font-size: 16px;
     color: #FFFFFF;
-}
-
-.bouquet-catalog__list li{
-    text-align: center;
-    border-radius: 10px;
-
-    width: 387px;
-    margin-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-bottom: 50px;
 }
 
 .bouquet-catalog div{
     background: rgba(174, 124, 120, 0.6);
     border-radius: 10px;
 
-    height: 442px;
-}
-  
+    width: 387px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 
-.bouquet-catalog__list li:first-child{
-     background:rgb(228, 223, 219) url('../image/catalog_wedding_bouquet.jpg') no-repeat center;
-     background-size: cover; 
-}
-
-.bouquet-catalog__list li:nth-child(2){
-    background:rgb(226, 188, 152) url('../image/cataloq_pions_bouquet.jpg') no-repeat center;
-    background-size: cover;
-}
-
-.bouquet-catalog__list li:last-child{
-    background:rgb(227, 227, 227) url('../image/catalog_choose_bouquet.jpg') no-repeat center;
-    background-size: cover;
-}
+} 
 
 
 
@@ -440,12 +471,12 @@ header {
     font-family: 'Montserrat', 'Verdana', sans-serif; 
     font-size: 16px;
 
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 
 .ideal-bouquet__list{
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .ideal-bouquet h2{
@@ -465,29 +496,32 @@ header {
 
     line-height: 20px;
 }
-.ideal-bouquet__list li{
+.ideal-bouquet__item{
     text-align: center;
 
-    height: 148px;
-    padding-top: 62px; 
+    padding-top: 62px;
+    padding-bottom: 30px; 
+    margin-right: 25px;
     flex-basis: 280px;
 }
 
-.ideal-bouquet__list li:first-child{
+.ideal-bouquet__item:nth-child(4n){
+    margin-right: 0;
+}
+
+.order{
     background:url('../image/ideal_bouquet_order.svg') top center no-repeat;
-   
 }
 
-.ideal-bouquet__list li:nth-child(2){
+.details{
     background:url('../image/ideal_bouquet_detail.svg') top center no-repeat;
-  
 }
 
-.ideal-bouquet__list li:nth-child(3){
+.payment{
     background:url('../image/ideal_bouquet_pay.svg') top center no-repeat;
 }
 
-.ideal-bouquet__list li:last-child{
+.delivery{
     background:url('../image/advantage_truck.svg') top center no-repeat;
 }
 
@@ -502,25 +536,19 @@ header {
 .news{
     display:grid;
     grid-template-columns: 488px auto auto;
-    grid-template-rows: auto auto;
-    column-gap: 20px;
-    margin-bottom: 78px;
+    grid-template-rows: auto auto auto;
+    gap: 20px;
+    margin-bottom: 58px;
 
     color: #AE7C78;
 }
 
-.news__social{
+.news__info{
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 4;
     width: 370px;
-}
-
-.news__social ul{
-    width: 100px;
-    display: flex;
-    justify-content: space-between;
 }
 
 .news__bouquet-1{
@@ -542,10 +570,10 @@ header {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 4;
 }
 
-.news__social h2{
+.news__info h2{
     margin-top: 70px;
     margin-bottom: 40px;
     position: relative;
@@ -561,7 +589,7 @@ header {
     -moz-text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 } 
 
-.news__social h2::before{
+.news__info h2::before{
     content:'Следите за нашими новостями';
     font-family: 'Playfair Display', 'Times New Roman', serif;
     font-weight: bold;
@@ -576,7 +604,7 @@ header {
     z-index: -1; 
 } 
 
-.news__social p{
+.news__info p{
     font-family: 'Montserrat', 'Verdana', sans-serif; 
     font-size: 24px;
     line-height: 29px;
@@ -584,21 +612,34 @@ header {
     margin-bottom: 40px;
 }
 
-.news__social li{
-    width: 24px;
-    height: 22px;
-    display: inline-block;
+.news__link{
+    display: flex;
 }
 
-.news__social li:first-child{
+.social{
+    width: 24px;
+    height: 22px;
+    margin-right: 15px;
+    margin-bottom: 10px;
+}
+
+.social:last-child{
+    margin-right: 0;
+}
+
+.social a{
+    padding: 10px;
+}
+
+.news__insta{
     background:url('../image/instagram_icon.svg') center no-repeat;
 }
 
-.news__social li:nth-child(2){
+.news__face{
     background:url('../image/facebook_icon.svg') center no-repeat;
 }
 
-.news__social li:last-child{
+.news__twit{
     background:url('../image/twitter_icon.svg') center no-repeat;
 }
 
@@ -614,15 +655,20 @@ header {
     border: 1px solid rgba(174, 124, 120, 1);
     text-align: center;
     color: #AE7C78;
+    width: 1200px;
+    box-sizing: border-box;
 
     padding-top: 42px;
-    padding-bottom: 62px;
+    padding-left: 45px;
+    padding-right: 40px;
+    padding-bottom: 22px;
     margin-bottom: 80px;
 }
 
 .reviews ul{
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+  
 }
 
 .reviews h2{
@@ -638,10 +684,12 @@ header {
     font-size: 16px;
    
     width: 300px;
+    margin-right: 105px;
+    padding-bottom: 40px;
 }
 
-.reviews ul li:nth-child(2){
-    margin: 0 105px; 
+.reviews ul li:nth-child(3n){
+    margin-right: 0; 
 }
 
 .reviews li blockquote{
@@ -664,7 +712,13 @@ header {
 
 .contacts{
     width: 1440px;
+    min-height: 645px;
     position: relative;
+    background-color: rgb(245,239,228);
+    padding-top: 52px;
+    padding-left: 222px;
+    box-sizing: border-box;
+   
 }
 
 .contacts__card{
@@ -675,12 +729,10 @@ header {
     color: #AE7C78;
 
     width: 386px;
-    height: 520px;
-    position: absolute;
-    top: 52px;
-    left: 222px;
-    padding-left: 36px;
-    padding-top: 45px;
+    padding: 45px 36px 58px 36px;
+    z-index: 2;
+    position: relative;
+    margin-bottom: 10px;
 }
 
 .contacts__card h2{
@@ -695,44 +747,29 @@ header {
     font-size: 16px;
 }
 
-.contacts__card p:nth-child(odd){
+.contacts__card p:nth-of-type(odd){
     font-weight: 500;
+    margin-bottom: 17px;
 }
 
-.contacts__card p:first-of-type{
-    margin-bottom: 18px;
-}   
+.contacts__card p:nth-of-type(even){
+    margin-bottom: 33px;
+}
 
-.contacts__card p:nth-of-type(2){
-    margin-bottom: 35px;
-} 
-
-.contacts__card p:nth-of-type(3){
-    margin-bottom: 15px;
-} 
-
-.contacts__card p:nth-of-type(4){
-    margin-bottom: 32px;
-} 
-
-.contacts__card p:nth-of-type(5){
-    margin-bottom: 15px;
-} 
-
-.contacts__card p:nth-of-type(6){
-    margin-bottom: 32px;
-} 
-
-.contacts__card p:nth-of-type(7){
-    margin-bottom: 12px;
-} 
+.contacts__card p:last-of-type{
+    margin-bottom: 0;
+}
 
 .contacts__card a{
     color: #AE7C78;
 }
 
 .contacts img{
-    vertical-align: top;
+    top:0;
+    left:0;
+    position: absolute;
+    z-index: 1;
+    
 }
 
 
@@ -750,22 +787,35 @@ footer *{
     padding-bottom: 37px;
 
     display: flex;
-    justify-content: space-between;
     align-items: center;
-   
+    justify-content: space-between;
 }
+
 
 footer {
     font-family: 'Montserrat', 'Verdana', sans-serif;
     font-size: 16px;
     background: #AE7C78;
+    box-sizing: border-box;
 }
 
-.footer-nav{
-    width: 800px;
 
+.footer-nav{
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-nav li{
+    margin-right: 68px;
+    padding: 5px 0;
+}
+
+.footer-nav li:last-child{
+    margin-right: 0;
+}
+
+.footer-wrapper>a{
+    margin-right: 15px;
 }
 
 .footer-nav li a{
@@ -773,26 +823,18 @@ footer {
 }
 
 .footer-link{
-    width: 90px;
-
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.footer-link li{
-    width: 24px;
-    height: 22px;
-    display: inline-block;
-}
-
-.footer-link li:first-child{
+.footer__insta{
     background:url('../image/instagram_icon_footer.svg') center no-repeat;
 }
 
-.footer-link li:nth-child(2){
+.footer__face{
     background:url('../image/facebook_icon_footer.svg') center no-repeat;
 }
 
-.footer-link li:last-child{
+.footer__twit{
     background:url('../image/twitter_icon_footer.svg') center no-repeat;
 }
