--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,14 @@
 a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
-:focus, :active {outline: none;}
-a:focus, a:active {outline: none;}
 ul li{list-style: none;}
 h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400;}
+:focus{outline: 3px solid blueviolet;}
 
 body{
-    background: #E5E5E5;
-}
-
-.container{
-    width: 1440px;
-    margin: 0 auto;
-    padding-top: 25px;
-
     background:#FFFFFF;
 }
 
-section{
-    width: 1200px;
-    margin: 0 auto;
-} 
+
 
 .visually-hidden {
     position: absolute;
@@ -57,7 +45,10 @@ header {
     border-top:1px solid #AE7C78;
     border-bottom:1px solid #AE7C78;
 
+    margin-top: 25px;
     margin-bottom: 80px;
+    min-width: 1440px;
+
 }
 
 .header-wrapper{
@@ -95,15 +86,18 @@ header {
     margin-right: 100px;
 }
 
-.header-list li:nth-child(6n+3){
+.header-list li:nth-child(3){
     margin-right: 240px;
 }
 
-.header-list li:last-child{
+.header-list li:nth-child(6n){
     margin-right: 0;
 }
 
-
+main{
+    min-width: 1440px;
+    margin: 0 auto;
+} 
 
 .authors-bouquet *{
     margin:0;
@@ -117,6 +111,9 @@ header {
 
     display: flex;
     margin-bottom: 52px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .authors-bouquet h1{
@@ -175,6 +172,9 @@ header {
     font-size: 16px;
 
     margin-bottom: 60px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .advantages__list{
@@ -239,6 +239,8 @@ header {
     grid-template-columns: 390px 400px;
     grid-template-rows: auto auto auto;
     margin-bottom: 65px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 
@@ -355,6 +357,9 @@ header {
 .bouquet-catalog{
     box-sizing: border-box;
     margin-bottom: 65px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .bouquet-catalog__list{
@@ -370,6 +375,7 @@ header {
     width: 387px;
     min-height: 442px;
 }
+
 
 .bouquet-catalog__card:nth-child(3n){
     margin-right: 0;
@@ -412,7 +418,7 @@ header {
     margin-bottom: 50px;
 }
 
-.bouquet-catalog div{
+.bouquet-catalog a{
     background: rgba(174, 124, 120, 0.6);
     border-radius: 10px;
 
@@ -439,6 +445,9 @@ header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 85px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .sale__img img{
@@ -481,6 +490,9 @@ header {
     font-size: 16px;
 
     margin-bottom: 50px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .ideal-bouquet__list{
@@ -548,8 +560,12 @@ header {
     grid-template-rows: auto auto auto;
     gap: 20px;
     margin-bottom: 58px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 
     color: #AE7C78;
+    
 }
 
 .news__info{
@@ -643,7 +659,7 @@ header {
 }
 
 .social a{
-    padding: 10px;
+    padding: 15px;
 }
 
 .news__insta{
@@ -693,6 +709,10 @@ header {
     padding-right: 40px;
     padding-bottom: 22px;
     margin-bottom: 80px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+
 }
 
 .reviews ul{
@@ -740,13 +760,19 @@ header {
 }
 
 .contacts{
-    width: 1440px;
+    min-width: 1440px;
     min-height: 645px;
     position: relative;
     background-color: rgb(245,239,228);
     padding-top: 52px;
-    padding-left: 222px;
+    padding-bottom: 10px;
     box-sizing: border-box;
+}
+
+.contacts__wrapper{
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .contacts__card{
@@ -760,7 +786,7 @@ header {
     padding: 45px 36px 58px 36px;
     z-index: 2;
     position: relative;
-    margin-bottom: 10px;
+    left:100px;
 }
 
 .contacts__card h2{
@@ -794,10 +820,13 @@ header {
 
 .contacts img{
     top:0;
-    left:0;
+    left: 50%;
+    transform: translatex(-50%);
     position: absolute;
     z-index: 1;
-}
+    width: 100%;
+    height: 100%;
+} 
 
 
 
@@ -824,12 +853,15 @@ footer {
     font-size: 16px;
     background: #AE7C78;
     box-sizing: border-box;
+
+    min-width: 1440px;
 }
 
 
 .footer-nav{
     display: flex;
     flex-wrap: wrap;
+    width: 810px;
 }
 
 .footer-nav li{
@@ -837,7 +869,7 @@ footer {
     padding: 5px 0;
 }
 
-.footer-nav li:last-child{
+.footer-nav li:nth-child(5n){
     margin-right: 0;
 }
 
@@ -852,6 +884,11 @@ footer {
 .footer-link{
     display: flex;
     flex-wrap: wrap;
+    width: 110px;
+}
+
+.footer-link .social:nth-child(3n){
+    margin-right: 0;
 }
 
 .footer__insta{
